# reasoning-team-agent

./: CONTRIBUTING.md  Dockerfile.agent  README.md  docker-compose.yml  mkdocs.yml  openapi.yaml  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: build-and-push.yml
docs/: index.md  modules.md
reasoning_team_agent/: __init__.py  __main__.py  __version__.py  agent_config.json  main.py
reasoning_team_agent/skills/explainable-business-reasoning/: skill.yaml
tests/: test_main.py
